Documentation: Add refactoring.html to the wix file http://bugs.activestate.com/show_bug.cgi?id=100255
(integrated from komodo (trunk) change 81918 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13632 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/install/wix/feature-docs.ini
+++ b/src/install/wix/feature-docs.ini
@@ -222,6 +222,7 @@ feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/prefs.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/profiling.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/project.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/publish.html
+feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/refactoring.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/regex-intro.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/regex.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/api-changes.html
