wix: add new getting started files
(integrated from komodo (trunk) change 83084 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13999 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1652,6 +1652,9 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/fastopen@activestate.com/pylib/fa
 feature-core/INSTALLDIR/lib/mozilla/extensions/fugue@p.yusukekamiyamane.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/fugue@p.yusukekamiyamane.com/fugue.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/fugue@p.yusukekamiyamane.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/getstarted.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/components/koHTML_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/install.rdf
