build: wix: add track changes add-on
(integrated from trunk branch change 53e114f by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1965,6 +1965,13 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveSt
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/pylib/lang_templatetoolkit.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/templates/All Languages/TemplateToolkit.ttkt.html
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/templates/Common/TemplateToolkit.ttkt.html
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/components/koChangeTracker.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/components/koIChangeTracker.xpt
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/idl/koIChangeTracker.idl
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/trackchanges.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/components/koTracWiki_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/install.rdf
