build: wix: add new chrome.manifest files for udl extensions
(integrated from trunk branch change e209469 by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1655,15 +1655,12 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/s
 feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/tabs.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/toolbars.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/window.less
+feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/actionscript_language.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/components/koActionScript_UDL_Language.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/content/pref-actionscript.xul
-feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/content/prefs.js
-feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/content/prefsOverlay.xul
+feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/lexers/ActionScript.lexres
-feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/locale/en-US/pref-actionscript.dtd
-feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/locale/en-US/pref-actionscript.properties
 feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/templates/All Languages/ActionScript.as
 feature-core/INSTALLDIR/lib/mozilla/extensions/actionscript_language@ActiveState.com/templates/Common/ActionScript.as
 feature-core/INSTALLDIR/lib/mozilla/extensions/analytics@activestate.com/analytics.jar
@@ -1676,6 +1673,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/crystal@everaldo.com/chrome.manif
 feature-core/INSTALLDIR/lib/mozilla/extensions/crystal@everaldo.com/crystal.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/crystal@everaldo.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/components/koDjango_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/lexers/Django.lexres
@@ -1685,6 +1683,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/t
 feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/templates/Common/Django.django.html
 feature-core/INSTALLDIR/lib/mozilla/extensions/django_language@ActiveState.com/templates/Web/Django.django.html
 feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/components/koEJS_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/lexers/EJS.lexres
@@ -1693,6 +1692,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/temp
 feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/templates/Common/EJS.ejs
 feature-core/INSTALLDIR/lib/mozilla/extensions/ejs_language@ActiveState.com/templates/Common/EJS.ejs.html
 feature-core/INSTALLDIR/lib/mozilla/extensions/epmojo_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/epmojo_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/epmojo_language@ActiveState.com/components/koEpMojo_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/epmojo_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/epmojo_language@ActiveState.com/lexers/epMojo.lexres
@@ -1714,6 +1714,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/chrome
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/getstarted.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/components/koHTML_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/html_language@ActiveState.com/lexers/HTML.lexres
@@ -1830,6 +1831,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/koextgen@activestate.com/chrome.m
 feature-core/INSTALLDIR/lib/mozilla/extensions/koextgen@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/koextgen@activestate.com/koextgen.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/komodo_snippet_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/komodo_snippet_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/komodo_snippet_language@ActiveState.com/components/komodoSnippet_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/komodo_snippet_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/komodo_snippet_language@ActiveState.com/lexers/Komodo_Snippet.lexres
@@ -1841,18 +1843,21 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/komodospellchecker@ActiveState.co
 feature-core/INSTALLDIR/lib/mozilla/extensions/komodospellchecker@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/komodospellchecker@ActiveState.com/komodospellchecker.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/components/koLaravelBlade_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/lexers/LaravelBlade.lexres
 feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/templates/All Languages/LaravelBlade.blade.php
 feature-core/INSTALLDIR/lib/mozilla/extensions/laravelblade_language@ActiveState.com/templates/Common/LaravelBlade.blade.php
 feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/components/koLuddite_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/lexers/Luddite.lexres
 feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/templates/All Languages/Luddite.udl
 feature-core/INSTALLDIR/lib/mozilla/extensions/luddite_language@ActiveState.com/templates/Common/Luddite.udl
 feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/components/koMason_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/lexers/Mason.lexres
@@ -1860,6 +1865,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/py
 feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/templates/All Languages/Mason.mason.html
 feature-core/INSTALLDIR/lib/mozilla/extensions/mason_language@ActiveState.com/templates/Common/Mason.mason.html
 feature-core/INSTALLDIR/lib/mozilla/extensions/mxml_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/mxml_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/mxml_language@ActiveState.com/components/koMXML_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/mxml_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/mxml_language@ActiveState.com/lexers/MXML.lexres
@@ -1873,6 +1879,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/chrome.
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/openfiles.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/php_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/php_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/php_language@ActiveState.com/components/koPHP_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/php_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/php_language@ActiveState.com/lexers/PHP.lexres
@@ -1952,6 +1959,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/skin_classic@activestate.com/skin
 feature-core/INSTALLDIR/lib/mozilla/extensions/skin_classic@activestate.com/skin/scrollbars.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/skin_classic@activestate.com/skin/toolbars.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/components/koSmarty_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/lexers/Smarty.lexres
@@ -1959,6 +1967,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/p
 feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/templates/All Languages/Smarty.tpl
 feature-core/INSTALLDIR/lib/mozilla/extensions/smarty_language@ActiveState.com/templates/Common/Smarty.tpl
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/components/koTemplateToolkit_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/templatetoolkit_language@ActiveState.com/lexers/TemplateToolkit.lexres
@@ -1973,12 +1982,14 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/idl/
 feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/trackchanges@activestate.com/trackchanges.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/components/koTracWiki_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/lexers/tracwiki.lexres
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/templates/All Languages/TracWiki.tracwiki
 feature-core/INSTALLDIR/lib/mozilla/extensions/tracwiki_language@ActiveState.com/templates/Common/TracWiki.tracwiki
 feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/components/koTwig_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/lexers/Twig.lexres
@@ -1988,6 +1999,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/tem
 feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/templates/Common/Twig.html.twig
 feature-core/INSTALLDIR/lib/mozilla/extensions/twig_language@ActiveState.com/templates/Common/Twig.twig
 feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/components/koXBL_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/lexers/XBL.lexres
@@ -1996,6 +2008,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/temp
 feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/templates/Common/XBL.xbl
 feature-core/INSTALLDIR/lib/mozilla/extensions/xbl_language@ActiveState.com/templates/Mozilla Development/xbl.xml
 feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/components/koXMLLanguage.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/components/koXMLLinter.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/install.rdf
@@ -2006,6 +2019,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/temp
 feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/templates/Samples/XML.xml
 feature-core/INSTALLDIR/lib/mozilla/extensions/xml_language@ActiveState.com/templates/Web/XML.xml
 feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/components/koXSLTLanguage.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/lexers/XSLT.lexres
@@ -2016,6 +2030,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/tem
 feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/templates/Samples/XSLT Stylesheet.xsl
 feature-core/INSTALLDIR/lib/mozilla/extensions/xslt_language@ActiveState.com/templates/Web/XSLT Stylesheet.xsl
 feature-core/INSTALLDIR/lib/mozilla/extensions/xul_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/xul_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/xul_language@ActiveState.com/components/koXUL_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/xul_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/xul_language@ActiveState.com/lexers/XUL.lexres
