wix: add new manifest files in add-ons

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1930,12 +1930,14 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Test/.folderdata
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Test/Unit_Tests.komodotool
 feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/components/koreStructuredText_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/lexers/reStructuredText.lexres
 feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/templates/All Languages/reStructuredText.rst
 feature-core/INSTALLDIR/lib/mozilla/extensions/restructuredtext_language@ActiveState.com/templates/Common/reStructuredText.rst
 feature-core/INSTALLDIR/lib/mozilla/extensions/rhtml_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/rhtml_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/rhtml_language@ActiveState.com/components/koRHTML_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/rhtml_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/rhtml_language@ActiveState.com/lexers/RHTML.lexres
