wix: add scope tools extension
(integrated from trunk branch change 00775d7 by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2033,6 +2033,10 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/compo
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/idl/koIScopeFiles.idl
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/scope-files.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/scope-tools.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/skin_classic@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/skin_classic@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/skin_classic@activestate.com/content/manifest/init.js
