wix: add new docs file
(integrated from trunk branch change 8d7fecc by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-docs.ini
+++ b/src/install/wix/feature-docs.ini
@@ -236,6 +236,7 @@ feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/ide-6
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/ide-6.1.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/ide-7.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/ide-8.0.html
+feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/ide-8.5.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/ide.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/index.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/releases/old.html
