wix: add new commando scope extensions

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2025,6 +2025,14 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Snippets/Views/xhtml-transitional.komodotool
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Test/.folderdata
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Test/Unit_Tests.komodotool
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-combined@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-combined@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-combined@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-combined@activestate.com/scope-combined.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-commands@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-commands@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-commands@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-commands@activestate.com/scope-commands.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/components/component.manifest
@@ -2033,6 +2041,10 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/compo
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/idl/koIScopeFiles.idl
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-files@activestate.com/scope-files.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/scope-openfiles.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/install.rdf
