--- a/src/codeintel/.gitignore
+++ b/src/codeintel/.gitignore
@@ -1,10 +1,10 @@
-lib/
-!lib/codeintel2/
-!lib/cb.p.py
-lib/codeintel2/lexers/
-src/*
-!src/komodo/
-!src/patches/
-test2/scan_actual/
-test2/tmp*
-tmp/
+src/codeintel/lib/
+src/codeintel/!lib/codeintel2/
+src/codeintel/!lib/cb.p.py
+src/codeintel/lib/codeintel2/lexers/
+src/codeintel/src/*
+src/codeintel/!src/komodo/
+src/codeintel/!src/patches/
+src/codeintel/test2/scan_actual/
+src/codeintel/test2/tmp*
+src/codeintel/tmp/
