--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@ qbtable.pik
 nohup.out
 /*.komodoproject
 /.komodotools/
+src/codeintel/lib/
+src/codeintel/!lib/codeintel2/
+src/codeintel/!lib/cb.p.py
+src/codeintel/lib/codeintel2/lexers/
+src/codeintel/src/*
+src/codeintel/!src/komodo/ 
+src/codeintel/!src/patches/
+src/codeintel/test2/scan_actual/
+src/codeintel/test2/tmp*
+src/codeintel/tmp/
+
