--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2003,6 +2003,17 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/komodospellchecker@ActiveState.co
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/openfiles.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/koGoAppInfo.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/koGoLanguage.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golang.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golib/outline.go
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/lang_go.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/langinfo_go.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/Common/Go.go
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/All Languages/Go.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/railstools.jar
