wix: update notify and golang add-on files
(integrated from master branch change 8a881dd by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1902,6 +1902,17 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/crystal@everaldo.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/getstarted.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/koGoAppInfo.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/koGoLanguage.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golang.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golib/outline.go
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/codeintel_go.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/lang_go.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/Common/Go.go
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/All Languages/Go.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/content/manifest/init.js
@@ -2004,20 +2015,12 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/kopy.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/notify@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/notify@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/notify@activestate.com/notify.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/openfiles.jar
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/component.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/koGoAppInfo.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/koGoLanguage.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/install.rdf
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golang.jar
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golib/outline.go
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/lang_go.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/langinfo_go.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/Common/Go.go
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/All Languages/Go.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/railstools.jar
