wix: update golang add-on files
(integrated from master branch change 14e43cc by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1910,7 +1910,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/install.rd
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golang.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/golib/outline.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/codeintel_go.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/lang_go.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/langinfo_go.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/Common/Go.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/All Languages/Go.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/chrome.manifest
